--- a/pages/saa/index.wxml
+++ b/pages/saa/index.wxml
@@ -12,8 +12,9 @@
 
   <view class="subject">
     <view class="box">
+      <view class="box_1">
 
-        <navigator class="row_1_left" url='/pages/saa_exam/index'>
+        <navigator class="navigator_up" url='/pages/saa_exam/index'>
           <image src="../../images/a.png" class="iamge"></image>
           <view class="row_1_right">
             <view>学习模式</view>
@@ -22,21 +23,43 @@
         </navigator>
 
 
-      <navigator class="row_1_left" url='/pages/saa_exam_remember/index'>
+        <view class="navigator_down">
+          <navigator class="navigator_down_1" url='/pages/saa_exam_1/index'>
+            <!-- <image src="../../images/b.png" class="iamge"></image> -->
+              <view>Part Ⅰ</view>
+          </navigator>
+          <navigator class="navigator_down_2" url='/pages/saa_exam_2/index'>
+            <!-- <image src="../../images/b.png" class="iamge"></image> -->
+              <view>PartⅡ</view>
+          </navigator>
+          <navigator class="navigator_down_3" url='/pages/saa_exam_3/index'>
+            <!-- <image src="../../images/b.png" class="iamge"></image> -->
+              <view>Part Ⅲ</view>
+          </navigator>
+          <navigator class="navigator_down_4" url='/pages/saa_exam_4/index'>
+            <!-- <image src="../../images/b.png" class="iamge"></image> -->
+              <view>Part Ⅳ</view>
+          </navigator>
+        </view>
+      </view>
+
+
+
+      <navigator class="box_1" url='/pages/saa_exam_remember/index'>
         <image src="../../images/b.png" class="iamge"></image>
         <view class="row_1_right">
           <view>记忆模式</view>
           <view>快速记忆背题，五年高考，三年模拟</view>
         </view>
       </navigator>
-      <navigator class="row_1_left" url='/pages/saa_exam_superman/index'>
+      <navigator class="box_1" url='/pages/saa_exam_superman/index'>
         <image src="../../images/d.png" class="iamge"></image>
         <view class="row_1_right">
           <view>神仙模式</view>
           <view>欲练此功，必先自宫</view>
         </view>
       </navigator>
-      <navigator class="row_1_left" url='/pages/saa_exam_zen/index'>
+      <navigator class="box_1" url='/pages/saa_exam_zen/index'>
         <image src="../../images/c.png" class="iamge"></image>
         <view class="row_1_right">
           <view>禅模式</view>
