--- a/pages/saa/index.wxss
+++ b/pages/saa/index.wxss
@@ -79,25 +79,24 @@ page {
 .navigator_down{
   display: flex;
   width: 100%;
-  background-color: tomato;
-  /* padding: 10rpx  0rpx; */
   justify-content: space-between;
 }
 .navigator_down_1{
-  background-color: white;
   padding: 10rpx ;
 }
 .navigator_down_2{
-  background-color: gold;
+ 
   padding: 10rpx ;
 }
 .navigator_down_3{
-  background-color: green;
+
   padding: 10rpx ;
 }
 .navigator_down_4{
-  background-color: wheat;
+
   padding: 10rpx ;
+  border-radius: 10rpx 10rpx;
+
 }
 .row_1_right{
   margin-left: 30rpx;
