--- a/pages/ccp/index.wxml
+++ b/pages/ccp/index.wxml
@@ -17,14 +17,14 @@
       <navigator class="row_1" url='/pages/ccp_exam/index'>
         <image src="../../images/a.png" class="iamge"></image>
         <view class="row_1_right">
-          <view>学习模式</view>
+          <view>🏠学习模式</view>
           <view>经典中英双语模式，在答题中学习</view>
         </view>
       </navigator>
       <navigator class="row_1" url='/pages/ccp_exam_remember/index'>
         <image src="../../images/c.png" class="iamge"></image>
         <view class="row_1_right">
-          <view>记忆模式</view>
+          <view>🗝记忆模式</view>
           <view>快速记忆背题，五年高考，三年模拟</view>
         </view>
       </navigator>
@@ -54,7 +54,7 @@
       <navigator class="row_1" url='/pages/ccp_exam_superman/index'>
         <image src="../../images/d.png" class="iamge"></image>
         <view class="row_1_right">
-          <view>神仙模式</view>
+          <view>🐳神仙模式</view>
           <view>欲练此功，必先自宫</view>
         </view>
       </navigator>
