--- a/pages/sap_exam_zen/index.wxml
+++ b/pages/sap_exam_zen/index.wxml
@@ -1,2 +1,10 @@
 <!--pages/exam_zen/index.wxml-->
-<view class="a">敬请期待</view>
+<view class="a">请联系群主领取禅纸质材料</view>
+<view>
+  <image  src="../../images/zen1.jpg" mode="widthFix"></image>
+  <image  src="../../images/zen2.jpg" mode="widthFix"></image>
+  <image  src="../../images/zen3.jpg" mode="widthFix"></image>
+  <image  src="../../images/zen4.jpg" mode="widthFix"></image>
+  <image  src="../../images/zen5.jpg" mode="widthFix"></image>
+  <image  src="../../images/zen6.jpg" mode="widthFix"></image>
+</view>
