--- a/pages/cloud_files/index.wxml
+++ b/pages/cloud_files/index.wxml
@@ -1,2 +1,7 @@
-<!--pages/cloud_files/index.wxml-->
-<text>pages/cloud_files/index.wxml</text>
+<text selectable='true' class="a">AWS云备考资料、技术手册、云计算基础、行业报告、案例资料等打包下载</text>
+<text selectable='true' class="a">　</text>
+<text selectable='true' class="a">百度网盘链接：</text>
+<text selectable='true' class="a"> </text>
+<text selectable='true' class="a">长按可复制，或扫描下方二维码下载</text>
+
+<image src="" class="a"></image>
