--- a/pages/cloud_files/index.wxss
+++ b/pages/cloud_files/index.wxss
@@ -1,1 +1,12 @@
-/* pages/cloud_files/index.wxss */
+.a{
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+}
+.b{
+  
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    
+}
