--- a/pages/cloud_group/index.wxml
+++ b/pages/cloud_group/index.wxml
@@ -1,4 +1,5 @@
 <text selectable='true' class="a">添加群主微信aws_superman</text>
 <text selectable='true' class="a">或扫描下方二维码,邀请入群</text>
-<text selectable='true' class="a">长按可复制</text>
-<image src="" class="a"></image>
+<text selectable='true' class="a">长按可复制微信号</text>
+<view>　</view>
+<image src="../../images/aws-uperman.png" class="a"></image>
