--- a/pages/cloud_about/index.wxml
+++ b/pages/cloud_about/index.wxml
@@ -6,7 +6,7 @@
     <image class="a_3" src="../../images/gzh1.png"></image>
     <view>　</view>
     <view>　</view>
-    <image  class="a_2" src="../../images/mini_program.jpg"></image>
+    <image  class="a_2" src="../../images/mini_program.png"></image>
     <view>截图扫描二维码使用小程序</view>
     
 
