--- a/pages/cloud_files/index.wxml
+++ b/pages/cloud_files/index.wxml
@@ -1,7 +1,9 @@
 <text selectable='true' class="a">AWS云备考资料、技术手册、云计算基础、行业报告、案例资料等打包下载</text>
 <text selectable='true' class="a">　</text>
-<text selectable='true' class="a">百度网盘链接：</text>
+<text selectable='true' class="a">百度网盘链接:</text>
+<text selectable='true' class="a">pan.baidu.com/s/1SLWQuDdGznVlrl7ZTxuSGA</text>
+<text selectable='true' class="a">密码:la36</text>
 <text selectable='true' class="a"> </text>
-<text selectable='true' class="a">长按可复制，或扫描下方二维码下载</text>
+<text selectable='true' class="a">长按可复制，或用微信扫描下方百度网盘小程序二维码下载</text>
 
-<image src="" class="a"></image>
+<image src="../../images/baidu.png" class="a"></image>
