--- a/pages/cloud_files/index.wxss
+++ b/pages/cloud_files/index.wxss
@@ -1,7 +1,9 @@
 .a{
   display: flex;
+  /* width: 200rpx; */
   /* justify-content: center;
   align-items: center; */
+  flex-wrap: wrap;
 }
 .b{
   
@@ -9,4 +11,8 @@
     /* justify-content: center;
     align-items: center; */
     
+}
+image{
+  width: 500rpx;
+  height: 500rpx;
 }
