--- a/pages/cloud_cloud/index.wxml
+++ b/pages/cloud_cloud/index.wxml
@@ -1,3 +1,3 @@
 <view>
-  <!-- <image src="../../images/cloud_cloud.jpg"></image> -->
+  <image src="http://aws.lycaicai.top/cloud_cloud.jpg"></image>
 </view>
