--- a/pages/cloud_fight/index.wxml
+++ b/pages/cloud_fight/index.wxml
@@ -1,2 +1,5 @@
-<!--pages/cloud_fight/index.wxml-->
-<text>pages/cloud_fight/index.wxml</text>
+<text selectable='true'>以下内容由于是图片展示，图片中备考连接无法复制，请长按复制连接在浏览器中打开</text>
+<text selectable='true'>https://juejin.im/post/6884968472552914958</text>
+<view>
+  <image src="http://aws.lycaicai.top/cloud_fight.jpg"></image>
+</view>
