--- a/pages/cloud_fight/index.wxml
+++ b/pages/cloud_fight/index.wxml
@@ -1,5 +1,6 @@
 <text selectable='true'>以下内容由于是图片展示，图片中备考连接无法复制，请长按复制连接在浏览器中打开</text>
 <text selectable='true'>https://juejin.im/post/6884968472552914958</text>
+<text selectable='true'>图片较大，加载较慢，请耐心等待</text>
 <view>
   <image src="http://aws.lycaicai.top/cloud_fight.jpg"></image>
 </view>
