--- a/pages/user_openid/index.wxml
+++ b/pages/user_openid/index.wxml
@@ -1,5 +1,5 @@
 
 <button bindtap="getOpenId">获取密钥</button>
-<view>密钥：{{openid}}</view>
+<text selectable='true'>密钥：{{openid}}</text>
 <view>版本号：1.6.3</view>
 <!-- <button bindtap="clearstoragesync">更新题库</button> -->
