增加复制功能

--- a/pages/user_openid/index.wxml
+++ b/pages/user_openid/index.wxml
@@ -1,5 +1,6 @@
 
 <button bindtap="getOpenId">获取密钥</button>
-<text selectable='true'>密钥：{{openid}}</text>
+<text selectable='true'> 密钥：{{openid}}</text>
+<view>长按密钥复制</view>
 <view>版本号：1.6.3</view>
 <!-- <button bindtap="clearstoragesync">更新题库</button> -->
