--- a/pages/sap_exam_remember/index.wxml
+++ b/pages/sap_exam_remember/index.wxml
@@ -34,7 +34,7 @@
             <!-- 确认答案 -->
             <!-- 确认答案的结果当flag==1或者0说明有答案，无论对错 0为错 1为对-->
             <view class="questions" >
-              <view>正确答案:{{body[outterIndex].answer}}</view>
+              <view>参考答案:{{body[outterIndex].answer}}</view>
               
             </view>
 
