将图片改成线上七牛云图片

--- a/pages/cloud_cloud/index.wxml
+++ b/pages/cloud_cloud/index.wxml
@@ -1,3 +1,3 @@
 <view>
-  <image src="http://aws.lycaicai.top/cloud_cloud.jpg"></image>
+  <image src="https://images.aws-superman.top/cloud_cloud.jpg"></image>
 </view>
