--- a/pages/cloud_fight/index.wxml
+++ b/pages/cloud_fight/index.wxml
@@ -2,5 +2,5 @@
 <text selectable='true'>https://juejin.im/post/6884968472552914958</text>
 <text selectable='true'>图片较大，加载较慢，请耐心等待</text>
 <view>
-  <image src="http://aws.lycaicai.top/cloud_fight.jpg"></image>
+  <image src="https://images.aws-superman.top/cloud_fight.jpg"></image>
 </view>
