--- a/pages/sap/index.wxml
+++ b/pages/sap/index.wxml
@@ -61,7 +61,7 @@
   <view class="dialog_mask" bindtap="toggleDialog" />
   <view class="dialog_container">
     <view>
-      <image class="dialog_image" src="../../images/ad_sap.png">
+      <image class="dialog_image" src="https://images.aws-superman.top/ad_sap.png">
       </image>
     </view>
   </view>
