更新了关于说明

--- a/pages/cloud_about/index.wxml
+++ b/pages/cloud_about/index.wxml
@@ -1,18 +1,20 @@
 <view>
   <view class="a">
     <image class="a_1" src="../../images/gzh2.jpg"></image>
-    <view> aws云题库为广大aws爱好者及考生提供持续的一站式可信赖的云题库服务。在这里你可以和群内各个云计算️爱好者讨论最新云技术，云资讯以及云行业发展。同时欢迎关注微信公众号AWS云神仙，获取最新资讯。
+    <view>
+      aws云题库为广大aws爱好者及考生提供持续的一站式的云题库。aws云神仙公众号为广大aws爱好者提供全方位多云资讯。在这里你可以和群内各个云计算️爱好者讨论题目，解答疑惑，最新云技术，云资讯以及云行业发展。同时欢迎关注微信公众号AWS云神仙，获取最新资讯。
     </view>
-    <image class="a_3" src="../../images/gzh1.png"></image>
-    <view>　</view>
-    <view>　</view>
-    <image  class="a_2" src="../../images/mini_program.png"></image>
+    <image class="a_2" src="../../images/gzh1.png"></image>
+    <image class="a_3" src="../../images/mini_program.png"></image>
     <view>截图扫描二维码使用小程序</view>
-    
+    <view>官方首页https://aws-superman.top</view>
+    <view>
+      <image class="a_4" src="https://images.aws-superman.top/aws-superman.top.png"></image>
+    </view>
 
   </view>
-
-
-
+</view>
+<!-- <image class="a_4" src="https://images.aws-superman.top/aws-superman.top.png"></image> -->
+<view>
 
 </view>
