--- a/pages/cloud_about/index.wxss
+++ b/pages/cloud_about/index.wxss
@@ -2,7 +2,8 @@
   /* width: 750rpx; */
   height: 240rpx;
   border-radius: 15rpx;
-  margin: 20rpx;
+  /* margin: 20rpx; */
+
   margin-bottom: 0rpx;
 
 }
@@ -17,12 +18,19 @@
 }
 
 .a_2{
+  width: 100%;
+  height:220rpx;
+}
+
+.a_3{
   height: 300rpx;
   width: 300rpx;
 
 }
 
-.a_3{
+
+.a_4{
+
   width: 100%;
-  height:220rpx;
+  height:27500rpx;
 }
