--- a/pages/saa/index.wxml
+++ b/pages/saa/index.wxml
@@ -46,7 +46,6 @@
 
 
       </navigator>
-
       <navigator class="box_1" url='/pages/saa_exam_quick/index'>
         <image src="../../images/b.png" class="iamge"></image>
         <view class="row_1_right">
@@ -80,10 +79,9 @@
         </view>
       </navigator>
 
-
+      {{xxxxx}}
 
     </view>
-
   </view>
 </view>
 
