--- a/pages/cloud_group/index.wxml
+++ b/pages/cloud_group/index.wxml
@@ -2,4 +2,4 @@
 <text selectable='true' class="a">或扫描下方二维码,邀请入群</text>
 <text selectable='true' class="a">长按可复制微信号</text>
 <view>　</view>
-<image src="https://images.aws-superman.top/aws-uperman.png" class="a"></image>
+<image src="https://images.aws-superman.top/aws-superman.png" class="a"></image>
