--- a/pages/cloud_about/index.wxml
+++ b/pages/cloud_about/index.wxml
@@ -7,7 +7,8 @@
     <image class="a_2" src="../../images/gzh1.png"></image>
     <image class="a_3" src="../../images/mini_program.png"></image>
     <view>截图扫描二维码使用小程序</view>
-    <view>官方首页https://aws-superman.top</view>
+    <view>以下为官方首页图片展示。若要更好的视觉体验及交互效果，请复制下方链接在浏览器中查看</view>
+    <text selectable="true">https://aws-superman.top</text>
     <view>
       <image class="a_4" src="https://images.aws-superman.top/aws-superman.top.png"></image>
     </view>
