--- a/pages/ccp/index.wxml
+++ b/pages/ccp/index.wxml
@@ -58,13 +58,7 @@
           <view>欲练此功，必先自宫</view>
         </view>
       </navigator>
-      <!-- <navigator class="row_1" url='/pages/ccp_exam_zen/index'>
-        <image src="../../images/c.png" class="iamge"></image>
-        <view class="row_1_right">
-          <view>禅模式</view>
-          <view>远离电子产品喧嚣，净心学习</view>
-        </view>
-      </navigator> -->
+      <view>{{notification_ccp}}</view>
 
 
 
