去掉了aws_spuerman的说明
2021.9.12 去掉了aws_spuerman的说明

--- a/pages/cloud_group/index.wxml
+++ b/pages/cloud_group/index.wxml
@@ -1,5 +1,5 @@
-<text selectable='true' class="a">添加群主微信aws_superman</text>
-<text selectable='true' class="a">或扫描下方二维码,邀请入群</text>
-<text selectable='true' class="a">长按可复制微信号</text>
+<text selectable='true' class="a">联系方式：Email：lin909958300@yeah.net</text>
+<!-- <text selectable='true' class="a">或扫描下方二维码,邀请入群</text> -->
+<text selectable='true' class="a">长按可复制邮箱号</text>
 <view>　</view>
-<image src="https://images.aws-superman.top/aws-superman.png" class="a"></image>
+<!-- <image src="https://images.aws-superman.top/aws-superman.png" class="a"></image> -->
